bluefish (2.2.5-2) UNRELEASED; urgency=low

  * 

 -- Daniel Leidert <dleidert@debian.org>  Sat, 15 Feb 2014 12:11:19 +0100

bluefish (2.2.5-1) unstable; urgency=low

  * New upstream release.
    - Fixes a highlighting bug (LP: #1242387, #1263967).
  * debian/control (Standards-Version): Bumped to 3.9.5.
    (Build-Depends): Added dh-autoreconf and some GTK related version info.
  * debian/copyright: Fixed unversioned-copyright-format-uri.
  * debian/rules: Use the autoreconf addon (closes: #737671).
  * debian/upstream-signing-key.pgp: Added upstream keyring.
  * debian/watch: Added signature URL.
  * debian/source/include-binaries: Added debian/upstream-signing-key.pgp.

 -- Daniel Leidert <dleidert@debian.org>  Tue, 11 Feb 2014 16:52:23 +0100

bluefish (2.2.4-2) unstable; urgency=low

  * debian/control (Standards-Version): Bumped to 3.9.4.
  * debian/copyright: Updated.

 -- Daniel Leidert <dleidert@debian.org>  Thu, 09 May 2013 14:36:58 +0200

bluefish (2.2.4-1) experimental; urgency=low

  * New upstream release.
    - Fixes mouse controlled zoom-out issue (LP: #1020925).
    - Fixes tabs width issue (LP: #1065625).
  * debian/copyright: Updated.
  * debian/patches/bz679203_fix_segfault.patch: Dropped (applied upstream).
  * debian/patches/fix_segfault_blocksync.patch: Ditto.
  * debian/patches/fix_segfault_scanner.patch: Ditto.
  * debian/patches/translation_updates.patch: Ditto.
  * debian/patches/series: Adjusted.

 -- Daniel Leidert <dleidert@debian.org>  Sat, 09 Feb 2013 23:43:04 +0100

bluefish (2.2.3-4) unstable; urgency=low

  * debian/patches/fix_segfault_blocksync.patch: Added.
    - Fix a segmentation fault in the block synchronization feature.
  * debian/patches/fix_segfault_scanner.patch: Added.
    - Fix segmentation faults in the language scanner feature.
  * debian/patches/series: Added.

 -- Daniel Leidert <dleidert@debian.org>  Mon, 10 Sep 2012 00:15:13 +0200

bluefish (2.2.3-3) unstable; urgency=low
