@@ -32,10 +32,7 @@ override_dh_auto_configure: configure
 	    LDFLAGS="$(LDFLAGS)"
 
 override_dh_install:
-	dh_install --list-missing
-
-override_dh_installchangelogs:
-	dh_installchangelogs NEWS
+	dh_install -Xsrc/lib/bluefish/*.la --list-missing
 
 override_dh_strip:
 	dh_strip --dbg-package=$(PACKAGE)-dbg
